--- a/css/walkthrough.css
+++ b/css/walkthrough.css
@@ -1143,6 +1143,7 @@ p {
     font-weight: 400;
     font-size: 1.8rem;
     line-height: 2.8rem;
+    margin-bottom: 1.5rem;
 }
 .subheading {
     font-family: "Public Sans";
